--- a/ProfileMatch.Components/User/UserOpenQuestionsTable.razor
+++ b/ProfileMatch.Components/User/UserOpenQuestionsTable.razor
@@ -27,20 +27,19 @@
              Breakpoint="Breakpoint.Sm"
              @bind-SelectedItem="selectedItem1">
     <Columns>
-        <Column T="UserAnswerVM" Title=@L["Name"]>
-            <CellTemplate>
-                @if (ShareResource.IsEn())
-                {
-                    @context.OpenQuestionName
-                    
-                }else{
-                    @context.OpenQuestionNamePl
-                }
-            </CellTemplate>
-        </Column>
-        <Column T="UserAnswerVM" Field="OpenQuestionDescription" Title=@L["Description"] />
-        <Column T="UserAnswerVM" Field="UserDescription" Title=@L["Answer"]/>
-        <Column T="UserAnswerVM" Title="@L["Edit"]">
+        @if (ShareResource.IsEn())
+        {
+            <Column Field="OpenQuestionName" T="UserAnswerVM" Title=@L["Name"] />
+            <Column T="UserAnswerVM" Field="OpenQuestionDescription" Title=@L["Description"] />
+            <Column T="UserAnswerVM" Field="UserDescription" Title=@L["Answer"] />
+        }
+        else
+        {
+            <Column Field="OpenQuestionNamePl" T="UserAnswerVM" Title=@L["Name"] />
+            <Column T="UserAnswerVM" Field="OpenQuestionDescriptionPl" Title=@L["Description"] />
+            <Column T="UserAnswerVM" Field="UserDescription" Title=@L["Answer"] />
+        }
+        <Column Sortable="false" T="UserAnswerVM" Title="@L["Edit"]">
             <CellTemplate><MudButton Variant="Variant.Outlined" Size="Size.Small" Style="color: var(--mud-palette-info-darken)!important; border-color: var(--mud-palette-info-darken)" OnClick="((e)=>UserNoteUpdate(context))">@L["Edit Answer"]</MudButton></CellTemplate>
         </Column>
     </Columns>
