--- a/ProfileMatch.Components/Dialogs/AdminClosedQuestionDialog.razor
+++ b/ProfileMatch.Components/Dialogs/AdminClosedQuestionDialog.razor
@@ -22,7 +22,7 @@
 {
     <MudDialog>
         <DialogContent>
-             if (ShareResource.IsEn())
+             @if (ShareResource.IsEn())
                     {
             <MudText Typo="Typo.h6">@Q.CategoryName: @Q.QuestionName</MudText>
                     
