--- a/ProfileMatch.Components/Admin/AdminDepartmentList.razor
+++ b/ProfileMatch.Components/Admin/AdminDepartmentList.razor
@@ -1,7 +1,7 @@
 ﻿
 <MudGrid Spacing="0" Class="d-flex justify-space-between">
     <MudItem xs="12" md="5">
-    <MudText Typo="Typo.h6">@L["Departments"]</MudText>
+        <MudText Typo="Typo.h6">@L["Departments"]</MudText>
     </MudItem>
     <MudItem xs="12" md="5">
         <MudTextField Class="d-flex justify-end"
@@ -28,8 +28,16 @@
     </HeaderContent>
     <RowTemplate>
         <MudTd DataLabel=@L["Id"]>@context.Id</MudTd>
-        <MudTd DataLabel=@L["Name"]>@L[context.Name]</MudTd>
-        <MudTd DataLabel=@L["Description"]>@context.Description</MudTd>
+        @if (ShareResource.IsEn())
+        {
+            <MudTd DataLabel=@L["Name"]>@context.Name</MudTd>
+            <MudTd DataLabel=@L["Description"]>@context.Description</MudTd>
+        }
+        else
+        {
+            <MudTd DataLabel=@L["Name"]>@context.NamePl</MudTd>
+            <MudTd DataLabel=@L["Description"]>@context.DescriptionPl</MudTd>
+        }
         <MudTd DataLabel=@L["Members"]>@context.ApplicationUsers.Count</MudTd>
         <MudTd DataLabel=@L["Edit"]>
             <MudButton Variant="Variant.Outlined" Size="Size.Small" Style="color: var(--mud-palette-info-darken)!important; border-color: var(--mud-palette-info-darken)" OnClick="((e)=>DepartmentUpdate(context))">@L["Edit Department"]</MudButton>
